<resources>
    <string name="app_name">EAT.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tovo Group</string>
    <string name="nav_header_subtitle">tovo@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="invalidEmail">Invalid Email</string>
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>
    <string name="login_dummy">Login Dummy</string>
    <string name="login">Login</string>
    <string name="invalid_email_password">Please provide a valid email and password.</string>
    <string name="project_info">This sample app implements MVVM architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvvm_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvvm_repo">2. https://github.com/MindorksOpenSource/android-mvvm-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="later">Later</string>
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>
    <string name="rewards">Rewards</string>
    <string name="referral">Referral</string>
    <string name="ratings">Ratings</string>
    <string name="payments">Payments</string>
    <string name="personal">Personal</string>
    <string name="help">HELP</string>
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string-array name="names">
        <item>Dhana</item>
        <item>Anand</item>
        <item>Jai</item>
        <item>Vivek</item>
        <item>Nethaji</item>
        <item>Sudhakar</item>
        <item>Vasanth</item>
    </string-array>
    <string-array name="emails">
        <item>dhana@gmail.com</item>
        <item>anand@gmial.com</item>
        <item>jai@gmail.com</item>
        <item>vivek@gmail.com</item>
        <item>nethaji@gmail.com</item>
        <item>sudhakar@gmail.com</item>
        <item>vasanth@gmail.com</item>
    </string-array>
    <string name="register">Register</string>
    <string name="payment">Payment</string>
    <string name="submit">Submit</string>
    <string name="registration">Registration</string>
    <string name="already_have_an_acc">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="t_and_c">Terms And Condition</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone_num">Phone Number</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="terms_and_condition">Terms And Conditions</string>
    <string name="accept_agree">Agree And Accept</string>
    <string name="acc_no">Account Number</string>
    <string name="re_acc_no">Re-Enter Account Number</string>
    <string name="bank_name">Name of Bank</string>
    <string name="acc_holder_name">Name of Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="live_products">Live Products List</string>
    <string name="make_products">Make Products</string>
    <string name="orders">Orders</string>
    <string name="rating_rewards">Ratings &amp; Rewards</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="item_type">Item Type</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="non_vegetarian">Non-Vegetarian</string>
    <string name="add_item">Add item</string>
    <string name="product_name">Product Name</string>
    <string name="add_to_live">Add to live product list</string>
    <string name="contact_soon">Our sales executive \n will contact you soon</string>
    <string name="appointment_made">Appointment Made!</string>
    <string name="_continue">Continue</string>
    <string name="congrats">Congrats</string>
    <string name="setup_complete">You have successfully setup \n your account </string>
    <string name="get_started">Get Started</string>
    <string name="lets_get_started">Lets Get Started!</string>
    <string name="register_complete">Registration completed!</string>
    <string name="initiate_brief">Tab continue to initiate\n product brief. </string>
    <string name="welcome_makeit">Welcome to makeIT</string>
    <string name="delivery_status">green</string>
    <string name="order_placed_time">Order placed at 12:45pm</string>
    <string name="customer_name">Ebin</string>
    <string name="customer_address">No.5, Muthu street,santhome</string>
    <string name="orders_title">Orders</string>
    <string name="orders_prepared">Order Prepared</string>
    <string name="orders_pickup">Order Picked up</string>
    <string name="order_cost">Rs.251</string>
    <string name="orders_delivery">Contact Delivery</string>
    <string name="total_amount">Total Amount</string>
    <string name="icon1">&#xe900;</string>
    <string name="earn_pts">Earn 1000pts for each friend that signs up using your code, for a maximum of 5000pts every month</string>
    <string name="sales">Sales</string>
    <string name="training">Training</string>
    <string name="training_sub">Training docs Media</string>
    <string name="sales_sub">Sales Appointments</string>
    <string name="biometrics">Biometrics</string>
    <string name="client_signature">Client Signature</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="scan_finger">Scan Finger</string>
    <string name="any_doubt">Any doubts? Write to us</string>
    <string name="replies">Replies</string>
    <string name="view_details">View Kitchens</string>
    <string name="identity">Identity Proof</string>
    <string name="upload">Upload</string>
    <string name="add_proof">Address Proof</string>
    <string name="birth_cert">Birth Certificate</string>
    <string name="training_pics">Training Pictures</string>
    <string name="tutorial_pics">Tutorial Pictures</string>
    <string name="training_docs">Training Documents</string>
    <string name="tutorial_files">Tutorial Files</string>
    <string name="training_videos">Training Videos</string>
    <string name="tutorial_diys">Video DIYs</string>
    <string name="queries">Queries</string>
    <string name="faqs">FAQ\'s</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="enter_transport_id">Enter transport ID</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_email_address">ENTER EMAIL ADDRESS</string>
    <string name="enter_password">Enter password</string>
    <string name="entr_pass">ENTER PASSWORD</string>
    <string name="location_permissions_required">Location permissions are required for tracking
        location. Please grant these permissions to continue.</string>
    <string name="missing_inputs">Please enter a transport ID, email and password</string>
    <string name="tracking">Tracking &#x2713;</string>
    <string name="not_tracking">Not tracking &#x2718;</string>
    <string name="connecting">Connecting &#8230;</string>
    <string name="status">status</string>
    <string name="location_permission_required">Location permission required.</string>
    <string name="gps_required">Gps not enabled.</string>
    <string name="ok">OK</string>
    <string name="enable">Enable</string>
    <string name="auth_failed">Firebase authentication failed</string>
    <string name="confirm_stop">Do you really want to disable location tracking?</string>
    <string name="firebase_path" translatable="false">raw-locations/</string>
    <string name="prefs" translatable="false">prefs</string>
    <string name="transport_id" translatable="false">transport_id</string>
    <string name="title_activity_maps">Map</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_direction">Map</string>
    <string name="direction">Direction</string>
    <string name="training_images">Training Images</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
    <string name="documentation">Documentation</string>
    <string name="next">Next</string>
    <string name="kitchen">Kitchens</string>
    <string name="kitchen_appliances">Kitchen Appliances</string>
    <string name="packaging">Packaging</string>
    <string name="appointment_scheduled">Appointment Scheduled</string>
    <string name="appointment_date">11:30PM | 12-09-2019</string>
    <string name="close">Close</string>
    <string name="sales_alert">Sales Alert!</string>
    <string name="dish">Dish</string>
    <string name="remove_geofences">Remove geofences</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="home">Home</string>
    <string name="set_delivery_address">Set Delivery Address</string>
    <string name="location_area">Location/Area*</string>
    <string name="house_flat_no">House/Flat.No*</string>
    <string name="area">Area*</string>
    <string name="landmark">Landmark*</string>
    <string name="save">Save</string>
    <string name="fields_are_mandatory">* Fields are mandatory</string>
    <string name="office">Work</string>
    <string name="other">Other</string>
    <string name="add_new_address">Add new address</string>
    <string name="change_kitchen_title">You can only order items from one kitchen at a time</string>
    <string name="change_kitchen_msg">Clear your cart if you would still like to order this item</string>
    <string name="cancel">Cancel</string>
    <string name="clear_cart_and_add">Clear cart and Add</string>
    <string name="icon_error">&#xe90d;</string>
    <string name="please_note">Please note!</string>
    <string name="refund_alert_msg">The refund coupon contains the entire amount of refund value and can be used only once per order. Do you wish to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>