<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/round_corner_alert"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:layout_margin="20dp"
    android:paddingBottom="10dp">





    <com.tovo.eat.utilities.fonts.poppins.SubTitleTextView
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/change_kitchen_title"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />
    <com.tovo.eat.utilities.fonts.poppins.ContentTextView
        android:id="@+id/message"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="start"
        android:text="@string/change_kitchen_msg"
        android:textAlignment="textStart"
        android:textColor="@color/dark_gray"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_below="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <com.tovo.eat.utilities.fonts.poppins.ButtonTextView
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/eat_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.tovo.eat.utilities.fonts.poppins.ButtonTextView
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:text="@string/clear_cart_and_add"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="@color/eat_color"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>


</RelativeLayout>


