<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="dialogRefundAlertViewModel"
            type="com.tovo.eat.ui.cart.refund.alert.DialogRefundAlertViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_background"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp">


            <com.tovo.eat.utilities.fonts.TovoTextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:text="@string/icon_error" />


            <com.tovo.eat.utilities.fonts.poppins.SubTitleTextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/please_note"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <com.tovo.eat.utilities.fonts.poppins.ContentTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="start"
                android:text="@string/refund_alert_msg"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.tovo.eat.utilities.fonts.poppins.ButtonTextView
           android:textAlignment="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:background="@drawable/curve_stroke_gray"
                    android:id="@+id/cancel"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="@{()->dialogRefundAlertViewModel.dialogConfirm()}"
                    android:text="@string/yes"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.tovo.eat.utilities.fonts.poppins.ButtonTextView
                    android:textAlignment="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:background="@drawable/curve_stroke_gray"
                    android:id="@+id/add"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:onClick="@{()->dialogRefundAlertViewModel.dialogCancel()}"
                    android:text="@string/no"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</layout>

