<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="addAddressViewModel"
            type="com.tovo.eat.ui.address.add.AddAddressViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="50dp"
            android:orientation="horizontal">


            <ImageView
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_arrow_back_black_24dp"/>




            <com.tovo.eat.utilities.fonts.CircularTextView
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_address"
                android:textSize="18sp"/>



        </LinearLayout>


        <FrameLayout
            android:layout_below="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/address">

            <fragment
                android:id="@+id/mapFragment"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:tag="tag_map_fragment" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/centerMarker"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:src="@drawable/map_marker" />

            </FrameLayout>
        </FrameLayout>


        <LinearLayout
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.tovo.eat.utilities.fonts.CircularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_delivery_address"
                    android:textSize="20sp" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location_area"
                        android:inputType="text"

                        android:text="@{addAddressViewModel.locationAddress}" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/house"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/house_flat_no"
                        android:inputType="text"
                        android:text="@{addAddressViewModel.house}" />
                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/area"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/area"
                            android:inputType="text"
                            android:text="@{addAddressViewModel.area}" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/landmark"
                            android:addTextChangedListener="@{addAddressViewModel.watcher}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/landmark"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>






                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <com.tovo.eat.utilities.fonts.CircularTextView
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/home"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp" />


                    <com.tovo.eat.utilities.fonts.CircularTextView
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/office"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp" />


                    <com.tovo.eat.utilities.fonts.CircularTextView
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/other"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp" />

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/save_as"
                        android:addTextChangedListener="@{addAddressViewModel.watcher}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Save as"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:onClick="@{()->addAddressViewModel.saveAddress(location.getText().toString(),house.getText().toString(),area.getText().toString(),landmark.getText().toString())}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/curve_stroke">

                    <com.tovo.eat.utilities.fonts.CircularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/save"
                        android:textColor="@color/eat_color"
                        android:textSize="20sp" />
                </RelativeLayout>
















            </LinearLayout>




            <com.tovo.eat.utilities.fonts.CircularTextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/fields_are_mandatory"
                android:textColor="@color/eat_color"
                android:textSize="14sp"
                android:layout_marginStart="10dp" />


        </LinearLayout>


    </RelativeLayout>


</layout>