<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="dialogChangeKitchenViewModel"
            type="com.tovo.eat.ui.home.homemenu.dish.dialog.DialogChangeKitchenViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:padding="30dp">

        <LinearLayout
         android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_background"
            android:orientation="vertical">

            <com.tovo.eat.utilities.fonts.CircularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_kitchen_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


            <com.tovo.eat.utilities.fonts.CircularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/change_kitchen_msg"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <com.tovo.eat.utilities.fonts.CircularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="@{()->dialogChangeKitchenViewModel.dialogCancel()}"
                    android:paddingLeft="7dp"
                    android:paddingTop="5dp"
                    android:paddingRight="7dp"
                    android:paddingBottom="5dp"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/eat_color"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <com.tovo.eat.utilities.fonts.CircularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:onClick="@{()->dialogChangeKitchenViewModel.dialogConfirm()}"
                    android:paddingLeft="7dp"
                    android:paddingTop="5dp"
                    android:paddingRight="7dp"
                    android:paddingBottom="5dp"
                    android:text="@string/clear_cart_and_add"
                    android:textAlignment="textEnd"
                    android:textAllCaps="true"
                    android:textColor="@color/eat_color"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</layout>

